// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes start components StartPage redirects to organizations page if selected organization not found or set 1`] = `
<div>
  All organizations
</div>
`;

exports[`routes start components StartPage redirects to selected organization if set 1`] = `
<div>
  My organization
</div>
`;

exports[`routes start components StartPage renders loading icon as long as selectedOrgnaization is not loaded 1`] = `
<div
  className="LoadingIcon-container-1"
>
  <div
    className="MuiCircularProgress-root LoadingIcon-icon-2 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
